added section on modifying the menus

--- a/dev_start.html
+++ b/dev_start.html
@@ -334,11 +334,28 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-intellij" href="#collapse-intellij-9">
-                        External tools
+                        Editor menu
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-intellij-9" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      <p>Rather than always using the <em>Find action</em> functionality via <code>Ctrl+Shift+A</code>, it sometimes pays off to simply adjust the corresponding menu. For instance, bringing up the <em>type hierarchy</em> for a class or the <em>implementations</em> or <em>declaration</em> of a method, is something frequently used in a larger framework. Here is what the modified <em>Editor Popup Menu</em> looks like:</p>
+                      <p/>
+                        <img src="img/tools/intellij-editor_menu.png"/>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion-intellij" href="#collapse-intellij-10">
+                        External tools
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse-intellij-10" class="panel-collapse collapse">
                     <div class="panel-body">
                       <p>Whether you want to launch your image editing tool (e.g., <a href="http://www.gimp.org/" target="_blank">Gimp</a> for creating icons) or launching Maven to auto-generate code (e.g., when using <a href="http://cxf.apache.org/" target="_blank">Apache CXF</a>), then you can use IDEA's <em>External tools</em> facility:</p>
                       <p/>
