added Leo as contributor

--- a/team.html
+++ b/team.html
@@ -52,6 +52,7 @@
         <li>Michael Fowke (adams-visualstats)</li>
         <li>Zufeng (Jeff) Yu (adams-weka-hadoop)</li>
         <li><a href="https://sites.google.com/site/jvanschoren/" target="_blank">Joaquin Vanschoren</a></li>
+        <li><a href="https://leoxiong.com/" target="_blank">Leo Xiong (adams-imaging)</a></li>
       </ul>
 
       <div id="footer">
