updated plugins section

--- a/dev_start.html
+++ b/dev_start.html
@@ -187,6 +187,7 @@
                         <ul>
                           <li>Subversion Integration</li>
                           <li>Maven Integration</li>
+                          <li>LaTeX</li>
                         </ul>
                       </p>
                       <p>
