added barcodes, ms access

--- a/about.html
+++ b/about.html
@@ -99,11 +99,11 @@
                   </tr>
                   <tr>
                     <td>Spreadsheets</td>
-                    <td>MS Excel (r/w), <a href="http://en.wikipedia.org/wiki/OpenDocument" target="_blank">ODF</a> (r/w), CSV (r/w), <a href="http://www.gnumeric.org/" target="_blank">Gnumeric</a> (r/w)</td>
+                    <td><a href="http://jackcess.sourceforge.net/" target="_blank">MS Access</a> (r/w), MS Excel (r/w), <a href="http://en.wikipedia.org/wiki/OpenDocument" target="_blank">ODF</a> (r/w), CSV (r/w), <a href="http://www.gnumeric.org/" target="_blank">Gnumeric</a> (r/w)</td>
                   </tr>
                   <tr>
                     <td>Imaging</td>
-                    <td><a href="http://imagej.nih.gov/ij/" target="_blank">ImageJ</a>, <a href="http://en.wikipedia.org/wiki/Java_Advanced_Imaging" target="_blank">JAI</a>, <a href="http://boofcv.org/" target="_blank">BoofCV</a>, <a href="http://www.imagemagick.org/" target="_blank">ImageMagick</a>, <a href="http://gnuplot.info/" target="_blank">Gnuplot</a>, <a href="http://code.google.com/p/lire/" target="_blank">LIRE</a>, <a href="https://code.google.com/p/tesseract-ocr/" target="_blank">OCR (tesseract)</a></td>
+                    <td><a href="http://imagej.nih.gov/ij/" target="_blank">ImageJ</a>, <a href="http://en.wikipedia.org/wiki/Java_Advanced_Imaging" target="_blank">JAI</a>, <a href="http://boofcv.org/" target="_blank">BoofCV</a>, <a href="http://www.imagemagick.org/" target="_blank">ImageMagick</a>, <a href="http://gnuplot.info/" target="_blank">Gnuplot</a>, <a href="http://code.google.com/p/lire/" target="_blank">LIRE</a>, <a href="https://code.google.com/p/tesseract-ocr/" target="_blank">OCR (tesseract)</a>, <a href="https://github.com/zxing/zxing" target="_blank">Barcodes (Zxing)</a></td>
                   </tr>
                   <tr>
                     <td>Graphics output</td>
