created new "Databases" section

--- a/about.html
+++ b/about.html
@@ -99,7 +99,11 @@
                   </tr>
                   <tr>
                     <td>Spreadsheets</td>
-                    <td><a href="http://jackcess.sourceforge.net/" target="_blank">MS Access</a> (r/w), MS Excel (r/w), <a href="http://en.wikipedia.org/wiki/OpenDocument" target="_blank">ODF</a> (r/w), CSV (r/w), <a href="http://www.gnumeric.org/" target="_blank">Gnumeric</a> (r/w)</td>
+                    <td>MS Excel (r/w), <a href="http://en.wikipedia.org/wiki/OpenDocument" target="_blank">ODF</a> (r/w), CSV (r/w), <a href="http://www.gnumeric.org/" target="_blank">Gnumeric</a> (r/w)</td>
+                  </tr>
+                  <tr>
+                    <td>Databases</td>
+                    <td><a href="http://jackcess.sourceforge.net/" target="_blank">MS Access</a>, <a href="http://www.mysql.com/" target="_blank">MySQL</a>, <a href="https://sqlite.org/" target="_blank">SQLite</a>, <a href="https://en.wikipedia.org/wiki/Java_Database_Connectivity" target="_blank">JDBC</a></td>
                   </tr>
                   <tr>
                     <td>Imaging</td>
