--- a/navbar.html
+++ b/navbar.html
@@ -47,6 +47,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About</a></li>
+                <li><a href="citing.html">Citing</a></li>
                 <li><a href="screenshots.html">Screenshots</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="team.html">Team</a></li>
