added new release

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                   </tr>
                   <tr>
                     <td>Visualization</td>
-                    <td>Scatter and line plots, Images, GIS (<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a>)</td>
+                    <td>Scatter and line plots, Control charts, Images, GIS (<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a>)</td>
                   </tr>
                   <tr>
                     <td>Scripting</td>
