--- a/release.html
+++ b/release.html
@@ -44,6 +44,34 @@
       <a href="http://sf.net/projects/theadamsflow/files/" target="_blank">Sourceforge.net</a>.</p>
 
       <div class="panel-group" id="accordion">
+        <!-- 0.4.9 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-9">
+                0.4.9<small> - released 2015-06-22</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-9" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li><strong>base</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-base-all-0.4.9-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-base-all-0.4.9-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-base-all-0.4.9-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-base-all-0.4.9-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+                <li><strong>base + addons</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-addons-all-0.4.9-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-addons-all-0.4.9-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-addons-all-0.4.9-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.9/adams-addons-all-0.4.9-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <!-- 0.4.8 -->
         <div class="panel panel-default">
           <div class="panel-heading">
