added note on automatically importing Maven projects in case of IntelliJ IDEA

--- a/dev_start.html
+++ b/dev_start.html
@@ -196,6 +196,7 @@
                       <p>Then, select the top-level directory of ADAMS and import it as Maven project:
                         <ul>
                           <li>import module from external model: Maven</li>
+                          <li>check <em>import Maven projects automatically</em></li>
                           <li>check <em>create module groups for multi-module Maven projects</em></li>
                           <li>select any relevant Maven profiles (or just use all of them)</li>
                         </ul>
