fixed import of other modules

--- a/dev_start.html
+++ b/dev_start.html
@@ -201,7 +201,7 @@
                           <li>select any relevant Maven profiles (or just use all of them)</li>
                         </ul>
                       </p>
-                      <p>If you want to add other projects, like <em>adams-addons</em> or <em>adams-incubator</em>, you must import them via the main menu's <em>File -&gt; Import module...</em> (<strong>not</strong> via Import project!).</p>
+                      <p>If you want to add other projects, like <em>adams-addons</em> or <em>adams-incubator</em>, you must import them via <em>File -&gt; Project structure...</em> from the main menu. There, select <em>Modules</em> and when clicking on the <em>greem plus sign</em>, select <em>Import module</em>.</p>
                     </div>
                   </div>
                 </div>
