--- a/navbar.html
+++ b/navbar.html
@@ -14,6 +14,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Events<b class="caret"></b></a>
               <ul class="dropdown-menu">
+                <li><a href="events/bigmine2015.html">BigMine 2015</a></li>
                 <li><a href="events/ernz2014.html">eResearch 2014</a></li>
               </ul>
             </li>
