--- a/events/bigmine2015.html
+++ b/events/bigmine2015.html
@@ -54,7 +54,7 @@
       <h4>Links</h4>
       <ul>
         <li><a href="bigmine2015-adams.zip">Download ADAMS</a></li>
-        <li><a href="bigmine2015-flows.zip">Download demo flows</a></li>
+        <li><a href="bigmine2015-adams-flows.zip">Download demo flows</a></li>
         <!--li><a href="bigmine2015-adams-paper.pdf">Paper</a></li-->
         <!--li><a href="bigmine2015-adams-slides.odp">Slides</a></li-->
       </ul>
