--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
 
     <div class="container">
       <div class="row">
-        <!-- event -->
-        <div class="col-md-4">
+        <!-- Current event -->
+        <div class="col-md-6">
           <h2>BigMine 2015</h2>
           <p>ADAMS has been invited for an open source demo talk/presentation at the <a href="http://bigdata-mining.org/bigmine-15/" target="_blank">BigMine 2015</a> workshop in Sydney, August 10th.</p>
           <p><a class="btn btn-default" href="events/bigmine2015.html" role="button">More »</a></p>
         </div>
-      </div>
-      <div class="row">
         <!-- About -->
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2>About</h2>
           <p>ADAMS offers a wide range of operators (called <em>actors</em>) that perform retrieval, processsing, mining and visualization of data. Instead of placing actors on a canvas and connecting them manually, actors connect implicitly in a tree structure instead.</p>
           <p><a class="btn btn-default" href="about.html" role="button">More »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="screenshots.html" role="button">Screenshots »</a></p>
         </div>
+      </div>
+      <div class="row">
         <!-- Download -->
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2>Download</h2>
           <p>Written in Java, ADAMS runs on any platform that supports <a href="http://www.oracle.com/technetwork/java/javase/" target="_blank">Java 1.7+</a>, preferably 64-bit. Download, unzip and off you go! You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
           <p><a class="btn btn-default" href="release.html" role="button">Release »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="snapshot.html" role="button">Snapshot »</a></p>
         </div>
         <!-- Get started -->
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2>Get started</h2>
           <p>Any complex piece of software takes some time getting used to. But don't worry, there are lots of example flows that show you how to use all the actors. ADAMS is a big plugin-framework, making it easy for developers adding new components.</p>
           <p><a class="btn btn-default" href="user_start.html" role="button">User »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="dev_start.html" role="button">Developer »</a></p>
