enabled slides/paper

--- a/events/bigmine2015.html
+++ b/events/bigmine2015.html
@@ -55,8 +55,8 @@
       <ul>
         <li><a href="bigmine2015/bigmine2015-adams.zip">Download ADAMS</a></li>
         <li><a href="bigmine2015/bigmine2015-adams-flows.zip">Download demo flows</a></li>
-        <!--li><a href="bigmine2015/bigmine2015-adams-paper.pdf">Paper</a></li-->
-        <!--li><a href="bigmine2015/bigmine2015-adams-slides.odp">Slides</a></li-->
+        <li><a href="bigmine2015/bigmine2015-adams-paper.pdf">Paper</a></li>
+        <li><a href="bigmine2015/bigmine2015-adams-slides.odp">Slides</a></li>
       </ul>
 
       <h3>4:30pm - 4:50pm | Invited Open Source Demo OpenML</h3>
@@ -65,7 +65,7 @@
       <h4>Links</h4>
       <ul>
         <li><a href="http://openml.org/" target="_blank">OpenML homepage</a></li>
-        <!--li><a href="bigmine2015/bigmine2015-openml-slides.pdf">Slides</a></li-->
+        <li><a href="bigmine2015/bigmine2015-openml-slides.pdf">Slides</a></li>
       </ul>
 
       <div id="footer-simple">
