--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Current event -->
         <div class="col-md-6">
           <h2>BigMine 2015</h2>
-          <p>ADAMS has been invited for an open source demo talk/presentation at the <a href="http://bigdata-mining.org/bigmine-15/" target="_blank">BigMine 2015</a> workshop in Sydney, August 10th.</p>
+          <p>ADAMS was invited for an open source demo talk/presentation at the <a href="http://bigdata-mining.org/bigmine-15/" target="_blank">BigMine 2015</a> workshop in Sydney, August 10th.</p>
           <p><a class="btn btn-default" href="events/bigmine2015.html" role="button">More »</a></p>
         </div>
         <!-- About -->
