updated Mac OSX instructions

--- a/release.html
+++ b/release.html
@@ -334,9 +334,9 @@
 
       <h4>Launching ADAMS</h4>
       <ul>
-        <li>Linux/Unix: bin/run</li>
+        <li>Linux/Unix/OSX: bin/run</li>
         <li>Windows: bin/run.bat</li>
-        <li>Mac OSX: open the app archive</li>
+        <li>Mac OSX: open the app archive (up til 0.4.10)</li>
       </ul>
       <p><strong>Mac users</strong> using the app archive need to tell ADAMS where to find the example flows (see above for download).  The <strong>Placeholders.props</strong> file needs to be <a href="/resources/Placeholders.props" target="_blank">downloaded</a> to <code>$HOME/.adams</code> and the <code>EXAMPLE_FLOWS</code> directory in the props file pointed to the actual directory with the example flows.</p>
 
