added new release

--- a/release.html
+++ b/release.html
@@ -44,6 +44,24 @@
       <a href="http://sf.net/projects/theadamsflow/files/" target="_blank">Sourceforge.net</a>.</p>
 
       <div class="panel-group" id="accordion">
+        <!-- 0.4.12 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-12">
+                0.4.12<small> - released 2015-12-22</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-12" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li><strong>base (all platforms): </strong><a href="http://sourceforge.net/projects/theadamsflow/files/0.4.12/adams-base-all-0.4.12-bin.zip/download" target="_blank">zip</a></li>
+                <li><strong>base + addons (all platforms): </strong><a href="http://sourceforge.net/projects/theadamsflow/files/0.4.12/adams-addons-all-0.4.12-bin.zip/download" target="_blank">zip</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <!-- 0.4.11 -->
         <div class="panel panel-default">
           <div class="panel-heading">
