--- a/rollyourown.html
+++ b/rollyourown.html
@@ -101,7 +101,7 @@
             <select id="version" name="version" onchange="update_modules();">
               <option value="" selected="yes">Please select</option>
               <script type="text/javascript">
-                var versions = ['0.4.12-SNAPSHOT', '0.4.11', '0.4.10', '0.4.9', '0.4.8', '0.4.7', '0.4.6', '0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
+                var versions = ['0.4.13-SNAPSHOT', '0.4.12', '0.4.11', '0.4.10', '0.4.9', '0.4.8', '0.4.7', '0.4.6', '0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
                 for (i = 0; i < versions.length; i++) {
                   document.write('<option value="' + versions[i] + '">' + versions[i] + "</option>");
                 }
