--- a/team.html
+++ b/team.html
@@ -53,6 +53,7 @@
         <li>Zufeng (Jeff) Yu (adams-weka-hadoop)</li>
         <li><a href="https://sites.google.com/site/jvanschoren/" target="_blank">Joaquin Vanschoren</a></li>
         <li><a href="https://leoxiong.com/" target="_blank">Leo Xiong (adams-imaging)</a></li>
+        <li>Steven Brown (adams-video)</li>
       </ul>
 
       <div id="footer">
