--- a/navbar.html
+++ b/navbar.html
@@ -23,6 +23,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/release.html">Release</a></li>
                 <li><a href="/snapshot.html">Snapshot</a></li>
+                <li><a href="/snapshot_apps.html">Snapshot (Apps)</a></li>
                 <li><a href="/rollyourown.html">&#8220;Roll your own&#8221;</a></li>
               </ul>
             </li>
