added more info on snapshots

--- a/snapshot_apps.html
+++ b/snapshot_apps.html
@@ -40,6 +40,7 @@
         <h1>Snapshot (Applications)</h1>
       </div>
 
+      <p>The snapshots for download here are applications with specific sets of modules for various purposes.</p>
       <p>Snapshots are automatically built once a day, unless there is a test failure that needs addressing.</p>
 
       <span id="snapshotimport"></span>
